--- a/ec2-one.yaml
+++ b/ec2-one.yaml
@@ -31,7 +31,7 @@ Resources:
   INSTANCE1:
     Type: 'AWS::EC2::Instance'
     Properties:
-      IamInstanceProfile: !Ref IAMINSTANCEPROFILE
+      #IamInstanceProfile: !Ref IAMINSTANCEPROFILE
       ImageId: !Ref IMAGEID
       InstanceType: !Ref INSTANCETYPE
       KeyName: !Ref NAME
