--- a/ec2-one.yaml
+++ b/ec2-one.yaml
@@ -7,7 +7,7 @@ Parameters:
     Default: server-4
   IAMINSTANCEPROFILE: 
     Type: String
-    Default: bastion-InstanceProfile-1UW06V8GJ9YYG
+    Default: ec2admin
   IMAGEID:
     Type: AWS::EC2::Image::Id
     Default: ami-0664ba3b9c9126195
@@ -31,7 +31,7 @@ Resources:
   INSTANCE1:
     Type: 'AWS::EC2::Instance'
     Properties:
-      #IamInstanceProfile: !Ref IAMINSTANCEPROFILE
+      IamInstanceProfile: !Ref IAMINSTANCEPROFILE
       ImageId: !Ref IMAGEID
       InstanceType: !Ref INSTANCETYPE
       KeyName: !Ref NAME
